Polish the hardware screen a bit further
