# app/backend/src/api/hardware.py
@@ -1,10 +1,16 @@
 from fastapi import APIRouter
+from fastapi.responses import StreamingResponse
 from lerobot.find_cameras import find_all_realsense_cameras
 
 from schemas import CalibrationConfig, Camera, RobotPortInfo
 from utils.calibration import get_calibrations
 from utils.camera import find_all_opencv_cameras
 from utils.robot import find_robots, identify_robot_visually
+
+from pydantic import BaseModel
+from typing import Literal, Generator
+
+import cv2
 
 router = APIRouter()
 
@@ -31,3 +37,42 @@ async def get_lerobot_calibrations() -> list[CalibrationConfig]:
 async def identify_robot(robot: RobotPortInfo, joint: str | None = None) -> None:
     """Visually identify the robot by moving given joint on robot"""
     await identify_robot_visually(robot, joint)
+
+
+def gen_frames(id: str, type: Literal["RealSense", "OpenCV"]) -> Generator[bytes, None, None]:
+    """
+    Continuously capture frames, encode them as JPEG,
+    and yield them in the multipart format expected by browsers.
+    """
+
+    if type == "OpenCV":
+        camera = cv2.VideoCapture(id)        
+    while True:
+        success, frame = camera.read()
+        if not success:
+            # If the frame could not be captured, stop the generator.
+            break
+
+        # Encode frame as JPEG
+        ret, buffer = cv2.imencode('.jpg', frame)
+        if not ret:
+            continue
+
+        # Convert to bytes
+        jpg_bytes = buffer.tobytes()
+
+        # Yield in multipart format
+        #   --frame\r\n
+        #   Content-Type: image/jpeg\r\n\r\n
+        #   <binary data>\r\n
+        yield (
+            b'--frame\r\n'
+            b'Content-Type: image/jpeg\r\n\r\n' + jpg_bytes + b'\r\n'
+        )
+
+@router.get("/camera_feed")
+async def get_camera_feed(id: str, type: Literal["RealSense", "OpenCV"]) -> StreamingResponse:
+    return StreamingResponse(
+        gen_frames(id, type),
+        media_type='multipart/x-mixed-replace; boundary=frame'
+    )
